--- a/.golangci.yml
+++ b/.golangci.yml
@@ -55,7 +55,7 @@ linters:
         - containedctx
         - contextcheck
         - decorder
-        - depguard
+        #- depguard
         - dogsled
         - dupl
         - durationcheck
