--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v1
       with:
-          go-version: 1.20
+          go-version: "1.21"
     - name: Run tests
       run: go test ./... -tags rocksdb
